@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)afm.h	1.30 (gritter) 4/30/06
+ * Sccsid @(#)afm.h	1.31 (gritter) 5/1/06
  */
 
 #ifndef	TROFF_AFM_H
@@ -109,6 +109,8 @@ extern	short		**fitab;
 extern	int		**fontab;
 extern	char		**kerntab;
 extern	short		**codetab;
+
+extern	int		NCHARS;
 
 extern unsigned short	unitsPerEm;
 
